<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Admin.TrangThemMonNgonAdminActivity">

    <!--  Header  -->
    <TextView
        android:id="@+id/txtTitle_add_food"
        android:text="@string/heading_1_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:paddingTop="25dp"
        android:paddingBottom="26dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/txtTitle_add_food"
        app:layout_constraintTop_toTopOf="@id/txtTitle_add_food"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/imgBack"
            android:layout_width="35dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:background="@color/primaryColor"
            android:contentDescription="Back"
            android:src="@drawable/ic_arrow_back" />
    </FrameLayout>

    <!--  Body -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle_add_food"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <!--   1. Name    -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_name"
                    android:textColor="@color/labelColor"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edt_name_food"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/custom_edt_admin"
                    android:hint="Nhập tên món"
                    android:inputType="text"
                    android:paddingLeft="14dp"
                    android:textColorHint="@color/edtColor" />
            </LinearLayout>

            <!--   2. Desc    -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_desc"
                    android:textColor="@color/labelColor"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edt_desc_food"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/custom_edt_desc_admin"
                    android:hint="Mô tả"
                    android:inputType="text"
                    android:paddingLeft="14dp"
                    android:textColorHint="@color/edtColor" />
            </LinearLayout>

            <!--   3. Price    -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_price"
                    android:textColor="@color/labelColor"
                    android:textSize="16sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_price_food"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/custom_edt_admin"
                        android:hint="Nhập giá"
                        android:inputType="text"
                        android:paddingLeft="14dp"
                        android:textColorHint="@color/edtColor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:paddingEnd="14dp"
                        android:text="VNĐ"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/primaryColor" />
                </FrameLayout>
            </LinearLayout>

            <!--   4. Sale    -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_sale"
                    android:textColor="@color/labelColor"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edt_sale_food"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/custom_edt_admin"
                    android:hint="Nhập khuyến mại"
                    android:inputType="text"
                    android:paddingLeft="14dp"
                    android:textColorHint="@color/edtColor" />
            </LinearLayout>

            <!--   5. Link URL Food    -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_img"
                    android:textColor="@color/labelColor"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edt_img_food"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/custom_edt_admin"
                    android:hint="Link URL"
                    android:inputType="text"
                    android:paddingLeft="14dp"
                    android:textColorHint="@color/edtColor" />
            </LinearLayout>

            <!--   6. Link URL Slider    -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_slider"
                    android:textColor="@color/labelColor"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edt_slider_food"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/custom_edt_admin"
                    android:hint="Link URL"
                    android:inputType="text"
                    android:paddingLeft="14dp"
                    android:textColorHint="@color/edtColor" />
            </LinearLayout>

            <!--   7. Popular    -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <EditText
                        android:id="@+id/edt_popular_food"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:paddingLeft="56dp"
                        android:background="@drawable/custom_edt_admin"
                        android:text="Phổ biến"
                        android:textStyle="bold"
                        android:textColor="@color/primaryColor"
                        android:inputType="none"
                        android:focusable="false"
                        android:textColorHint="@color/edtColor" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginTop="6dp"
                        android:layout_marginLeft="16dp" />
                        />
                </FrameLayout>
            </LinearLayout>

            <!--   8. Link URL Other    -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_url_other"
                    android:textColor="@color/labelColor"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edt_url_other_food"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/custom_edt_admin"
                    android:hint="Link URL"
                    android:inputType="text"
                    android:paddingLeft="14dp"
                    android:textColorHint="@color/edtColor" />
            </LinearLayout>

            <!--   9. Button   -->
            <Button
                android:id="@+id/btn_add_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="28dp"
                android:background="@drawable/custom_btn_admin"
                app:backgroundTint="@null"
                android:text="THÊM" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
