<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.FragmentBottomNavigationUser.CartUserFragment">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        android:gravity="center"
        android:background="@color/orange">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/title_cart_page"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24dp" />


        </FrameLayout>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:layout_marginTop="8dp"
                />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/orange"/>
        <LinearLayout
            android:id="@+id/linear_sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_above="@+id/btnTaodon">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sum"
                android:fontFamily="@font/inter_semibold"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/txt_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28dp"
                android:textStyle="bold|italic"

                android:layout_weight="1"
                android:layout_marginStart="15dp"
                android:textColor="@color/orange"/>
            <Button
                android:id="@+id/btn_add_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_order"
                android:backgroundTint="@color/orange"
                android:layout_marginEnd="10dp"/>


        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>