<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityUser.DetailPageUserActivity">
    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        android:gravity="center"
        android:background="@color/orange">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/muiten"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="9dp"
                />
            <TextView
                android:id="@+id/txt_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_detail"
                android:textColor="@color/white"
                android:fontFamily="@font/inter_semibold"
                android:textSize="24dp"
                android:layout_weight="1"
                android:textAlignment="center"
                />

            <ImageView
                android:id="@+id/img_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="9dp"
                android:src="@drawable/ion_cart"
                app:tint="@color/white" />
        </FrameLayout>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear1"
        app:layout_constraintBottom_toTopOf="@+id/btn_them">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_detail"
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/thumbnail_height"
                android:scaleType="fitCenter"
                android:src="@drawable/imgslider2" />

            <TextView
                android:id="@+id/txt_name_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/inter_semibold"
                android:text="Salad cá hồi"
                android:textColor="@color/black"
                android:textSize="23dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/title_price"
                    android:textColor="@color/grey"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/txt_price_new_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/inter_semibold"
                    android:text="59 000 VNĐ"
                    android:textColor="@color/orange"
                    android:textSize="22dp" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp">

                    <TextView
                        android:id="@+id/txt_price_old_chitiet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/inter_semibold"
                        android:text="69 000 VNĐ"
                        android:textColor="@color/grey"
                        android:textSize="16dp" />

                    <View
                        android:id="@+id/line"
                        android:layout_width="100dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/grey" />
                </FrameLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@color/orange"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_desc"
                android:textSize="20dp"
                android:fontFamily="@font/inter_medium"
                android:layout_marginStart="17dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/orange"/>
            <TextView
                android:id="@+id/txt_desc_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Salad cá hồi là một món ăn ngon và bổ dưỡng, kết hợp giữa hương vị tươi ngon của cá hồi và độ giòn của các loại rau. Đây cũng là một món salad rất phổ biến và dễ làm tại nhà. Trong bài viết này, chúng ta sẽ tìm hiểu cách làm salad cá hồi ngon tuyệt vời."
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:textSize="20dp"
                android:fontFamily="@font/inter_light"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_img"
                android:textSize="20dp"
                android:fontFamily="@font/inter_medium"
                android:layout_marginStart="17dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/orange"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:layout_marginTop="8dp"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
    <Button
        android:id="@+id/btn_them"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:backgroundTint="@color/orange"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_button"
        android:textSize="20dp"
        android:fontFamily="@font/inter_semibold"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>